sbt: improve java options